--- a/input/template_begin.html
+++ b/input/template_begin.html
@@ -10,5 +10,7 @@
 		body { background-color: #303030; color: #cccccc; font-family: verdana;}
 		td { padding: 4px; }
 		a { text-decoration: none; }
+		table { border-collapse: collapse; }
+		tr.winner { border: solid #e6cc80 2px; border-radius: 4px; }
 	</style>
     <body>
