--- a/input/template_begin.html
+++ b/input/template_begin.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 	<head>
 		<meta charset="utf-8" />
-		<title>EPGP selections</title>
+		<title>CLM Auction History</title>
 		<script>const whTooltips = {colorLinks: true, iconizeLinks: true, renameLinks: true, iconSize:'small'};</script>
 		<script src="https://wow.zamimg.com/js/tooltips.js"></script>
 	</head>
